--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = coffeecode
-	email = 35342238+0xC0FFEEC0DE@users.noreply.github.com
+	name = 0xdv
+	email = 0xc0ffec0de@gmail.com
 [color]
 	ui = true
 [merge]
